[gd_scene load_steps=4 format=3 uid="uid://c5q8v7t4x1w"]

[ext_resource type="Script" path="res://MVP/System/mvp_main.gd" id="1"]
[ext_resource type="Script" path="res://MVP/System/turn_manager.gd" id="2"]
[ext_resource type="PackedScene" path="res://MVP/View/HexMapView.tscn" id="3"]

[node name="MVP_Main" type="Node"]
script = ExtResource("1")

[node name="TurnManager" type="Node" parent="."]
script = ExtResource("2")

[node name="HexMapView" parent="." instance=ExtResource("3")]

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.2, 1)
